<resources>
    <string name="app_name">AppParcialICM</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>


    <string name="desc_btn_iniciar_sesion">Botón para iniciar sesión</string>

    <string name="hint_nombre">Nombre</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_celular">Número de celular</string>
    <string name="hint_fecha">Fecha de nacimiento</string>
    <string name="terminos">Aceptar términos y condiciones</string>
    <string name="rb_masculino">Masculino</string>
    <string name="rb_femenino">Femenino</string>
    <string name="btn_validar">Validar</string>
    <string name="btn_regresar">Regresar</string>
</resources>





