<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:textColor="#000000"
            android:importantForAccessibility="no" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:hint="@string/hint_usuario"
            android:maxLength="20"
            android:inputType="textPersonName"
            android:importantForAutofill="yes"
            android:autofillHints="username"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#757575" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:hint="@string/hint_contraseña"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:autofillHints="password"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#757575" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:text="@string/btn_iniciar_sesion"
            android:backgroundTint="#3F51B5"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
